# avir-protocol

./: .gitignore  PROTOCOL.md  README.md  pyproject.toml
.github/workflows/: ci.yml
avir/: __init__.py  attestation.py  benchmark.py  cli.py  cross_verification.py  specification.py  verdict.py  verifier.py
avir/providers/: __init__.py  base.py  claude.py  gemini.py  openai.py
docs/: CROSS_VERIFICATION.md
examples/: advanced_verification.py  basic_spec.json  cross_verify_example.py
specs/: attestation.schema.json  specification.schema.json
tests/: __init__.py  test_cross_verification.py  test_security_functions.py  test_specification.py  test_statistical_functions.py
